feat: Update project configuration and dependencies
This commit updates the project's `package.json` to reflect a new package name and version, along with dependency and dev-dependency version adjustments. It also modifies `index.html` to correctly configure import maps for dependencies and adds a script tag for `index.tsx`. `vite.config.ts` is simplified to use a `base: './'` for better asset handling in static deployments. `tsconfig.json` is updated with more standard compiler options. `firebase.json` is added to configure hosting for a static build. A clean `.gitignore` is also introduced.

--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "imposter!",
+  "name": "imposter-game",
   "private": true,
-  "version": "0.0.0",
+  "version": "1.0.0",
   "type": "module",
   "scripts": {
     "dev": "vite",
@@ -9,17 +9,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "react-dom": "^19.2.0",
-    "react": "^19.2.0",
-    "lucide-react": "^0.553.0",
     "clsx": "^2.1.1",
-    "tailwind-merge": "^3.4.0",
-    "uuid": "^13.0.0"
+    "lucide-react": "^0.300.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "tailwind-merge": "^2.2.0",
+    "uuid": "^9.0.1"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@types/react": "^18.2.0",
+    "@types/react-dom": "^18.2.0",
+    "@types/uuid": "^9.0.0",
+    "@vitejs/plugin-react": "^4.2.0",
+    "typescript": "^5.2.0",
+    "vite": "^5.0.0"
   }
 }
